# redweather

./: .gitignore  Cargo.toml  README.md  TODO.md  config.toml.example  waybar_module.jsonc  zip_prompt.py
src/: astro.rs  config.rs  dashboard.rs  formatting.rs  gauges.rs  graph.rs  main.rs  ui.rs  utils.rs  weather.rs
