[package]
name = "redweather"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gtk = { package = "gtk4", version = "0.8", default-features = true, features = ["v4_6"] }
glib = "0.18"
toml = "0.8"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
once_cell = "1.20"
